2007-11-22  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-shlibdeps.pl: Add more debug messages.

2007-11-21  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Shlibs/Objdump.pm: Fix the checks in is_executable() and
	is_public_library().
	* scripts/t/200_Dpkg_Shlibs.t: Add some more tests to make sure
	the above functions behave as expected.
	* scripts/t/400_Dpkg_Deps.t: Add some more tests to make sure that
	empty dependency fields are correctly handled.
	* scripts/Makefile.am: Include the new data files required by the
	tests above.
	* scrips/Dpkg/Fields.pm: New module containing 3 functions moved
	out of controllib.pl (capit(), set_field_importance(),
	sort_by_field_importance()).
	* scripts/controllib.pl: Removed the 3 functions above.
	* scripts/dpkg-shlibdeps.pl: Use Dpkg::Fields for capit().
	* scripts/dpkg-genchanges.pl: Use Dpkg::Fields for capit() and
	set_field_importance().
	* scripts/dpkg-gencontrol.pl: Likewise.
	* scripts/dpkg-source.pl: Likewise.

2007-11-20  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.14.10~.

2007-11-20  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.14.9.

2007-11-19  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Path.pm: Fix behaviour of get_pkg_root_dir() when
	there's no DEBIAN subdirectory in none of the parent directories.
	* scripts/dpkg-shlibdeps.pl: Handle undef values returned by
	get_pkg_root_dir() and complain when it's likely to create a
	problem (when a RPATH contains $ORIGIN and when the value of
	this variable can't be determined because we don't know what
	is the root directory of the temporary tree).
	* scripts/Dpkg/Deps.pm: Fix parse() to handle empty fields instead
	of returning undef.

2007-11-19  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.14.9~.

2007-11-19  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.14.8.

2007-11-19  Guillem Jover  <guillem@debian.org>
