@@ -7,6 +7,7 @@ dpkg (1.14.10) UNRELEASED; urgency=low
     Closes: #452262
   * Add more debug messages to dpkg-shlibdeps to ease collecting information
     in case of problems.
+  * dpkg-shlibdeps now accepts again empty dependencies in shlibs files.
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson)
