@@ -1,6 +1,7 @@
 2007-11-22  Raphael Hertzog  <hertzog@debian.org>
 
-	* scripts/dpkg-shlibdeps.pl: Add more debug messages.
+	* scripts/dpkg-shlibdeps.pl: Add more debug messages. Accept empty
+	dependencies in shlibs files again.
 
 2007-11-21  Raphael Hertzog  <hertzog@debian.org>
 
